# vath

./: .gitignore  CMakeLists.txt  DISCLAIMER_DRAFT.md  LICENSE  README.md
Vath/: Kurvendiskuteur.cs  Monomial.cs  Polynomial.cs  Program.cs  TODO.txt  Term.cs  Vath.sln
Vath.Kurvendiskuteur/: KurvendiskuteurForm.cs  Program.cs  Vath.KurvendiskussionsApplet.csproj
Vath.Kurvendiskuteur/Properties/: Resources.Designer.cs
Vath.UnitsTests/: PolynomialTests.cs  TermTests.cs  Vath.UnitsTests.csproj
Vath/Properties/: launchSettings.json
application/: main.cpp  tempCodeRunnerFile.cpp
application/headers/: firsttest.hpp  monomial.hpp  polynomial.hpp
application/sources/: firsttest.cpp  main.cpp  monomial.cpp  polynomial.cpp
old/C#/Vath/: Kurvendiskuteur.cs  Monomial.cs  Polynomial.cs  Program.cs  TODO.txt  UltraPrecisionDecimal.cs  Vath.sln
old/C#/Vath.Kurvendiskuteur/: KurvendiskuteurForm.Designer.cs  KurvendiskuteurForm.cs
old/C#/Vath.UnitsTests/: MonomialTests.cs  PolynomialTests.cs  UltraPrecisionDecimalTests.cs  Vath.UnitTests.csproj
old/Python/: main.py  polynomdivision.py  polynomial.py  test.py  vath.py
tests/: CMakeLists.txt  MonomialTests.cpp  PolynomialTests.cpp  VathTests.cpp
